--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.15",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.0.13",
+    "@mapbox/search-js-react": "^1.0.0-beta.21",
+    "@mui/icons-material": "^5.16.6",
+    "@mui/material": "^5.16.6",
     "firebase": "^10.11.1",
     "mapbox-gl": "^3.3.0",
     "react": "^18.2.0",
