--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mapbox/search-js-react": "^1.0.0-beta.21",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
+    "@mui/x-data-grid": "^7.12.0",
     "firebase": "^10.11.1",
     "mapbox-gl": "^3.3.0",
     "react": "^18.2.0",
