--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "@mui/x-data-grid": "^7.12.0",
+    "@mui/x-date-pickers": "^7.12.1",
+    "dayjs": "^1.11.12",
     "firebase": "^10.11.1",
     "mapbox-gl": "^3.3.0",
+    "moment": "^2.30.1",
+    "quantumwebpagetest": "file:",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.0"
