--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/x-date-pickers": "^7.12.1",
     "dayjs": "^1.11.12",
     "firebase": "^10.11.1",
+    "js-cookie": "^3.0.5",
     "mapbox-gl": "^3.3.0",
     "moment": "^2.30.1",
     "quantumwebpagetest": "file:",
