--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "quantumwebpagetest": "file:",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.1",
+    "react-scripts": "5.0.0" 
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
