--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.16.7",
     "@mui/x-data-grid": "^7.12.0",
     "@mui/x-date-pickers": "^7.12.1",
+    "axios": "^1.7.5",
     "dayjs": "^1.11.12",
     "firebase": "^10.11.1",
     "js-cookie": "^3.0.5",
@@ -27,7 +28,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.1",
-    "react-scripts": "5.0.0" 
+    "react-scripts": "5.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
