--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.16.7",
     "@mui/x-data-grid": "^7.12.0",
     "@mui/x-date-pickers": "^7.12.1",
+    "@testing-library/jest-dom": "^6.5.0",
     "dayjs": "^1.11.12",
     "firebase": "^10.11.1",
     "js-cookie": "^3.0.5",
@@ -31,13 +32,19 @@
     "react-scripts": "5.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "@testing-library/react": "^16.0.1",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "jest": "^27.5.1",
+    "react-test-renderer": "^18.3.1",
     "vite": "^5.4.0"
   }
 }
