--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.16.7",
     "@mui/x-data-grid": "^7.12.0",
     "@mui/x-date-pickers": "^7.12.1",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
     "firebase": "^10.11.1",
     "js-cookie": "^3.0.5",
