--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/x-date-pickers": "^7.12.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
+    "dayjs-plugin-utc": "^0.1.2",
     "firebase": "^10.11.1",
     "js-cookie": "^3.0.5",
     "mapbox-gl": "^3.3.0",
