--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.13",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mapbox/search-js-react": "^1.0.0-beta.21",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
@@ -30,7 +33,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.1",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "rss-parser": "^3.13.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.25.4",
