--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dayjs-plugin-utc": "^0.1.2",
     "firebase": "^10.11.1",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^3.3.0",
     "moment": "^2.30.1",
     "quantumwebpagetest": "file:",
